edit item feature

--- a/app/src/main/res/layout/activity_todo_list.xml
+++ b/app/src/main/res/layout/activity_todo_list.xml
@@ -34,12 +34,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:id="@+id/btnAddItem"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:text="@string/add"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/etEditText"
-        android:layout_toEndOf="@+id/etEditText"
-        android:text="@string/add"
-        android:onClick="onAddItem"/>
+        android:layout_toEndOf="@+id/etEditText" />
 
 </RelativeLayout>
