--- a/app/src/main/res/layout/activity_todo_list.xml
+++ b/app/src/main/res/layout/activity_todo_list.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
+        android:imeOptions="actionDone"
         android:ems="10"
         android:layout_alignBottom="@+id/btnAddItem"
         android:layout_alignParentLeft="true"
