--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="paddingBottomVal">6dp</dimen>
+    <dimen name="paddingTopVal">5dp</dimen>
+    <dimen name="paddingLeftVal">3dp</dimen>
 </resources>
